--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
 
     <color name="blue_primary">#3756E2</color>
     <color name="gray_primary">#242426</color>
+    <color name="gray_light">#7D7D82</color>
 </resources>
