Change Requirement Fixing

--- a/app/src/main/res/layout/item_list_user.xml
+++ b/app/src/main/res/layout/item_list_user.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/black"
@@ -31,11 +32,12 @@
         android:id="@+id/iv_profpict"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:src="@mipmap/user_circle"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="@id/circle_stroke"
         app:layout_constraintEnd_toEndOf="@id/circle_stroke"
         app:layout_constraintTop_toTopOf="@id/circle_stroke"
-        app:layout_constraintBottom_toBottomOf="@id/circle_stroke"/>
+        app:layout_constraintBottom_toBottomOf="@id/circle_stroke"
+        tools:ignore="RedundantNamespace" />
 
     <TextView
         android:id="@+id/tv_nameuser"
