--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,16 +30,18 @@
         app:layout_constraintTop_toBottomOf="@id/blue_logo" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/rv_usergithub"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="36dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="36dp"
         android:layout_marginEnd="36dp"
         tools:listitem="@layout/item_list_user"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/line_gray"/>
+        app:layout_constraintTop_toBottomOf="@id/line_gray"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
