--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,41 +10,33 @@
 
     <ImageView
         android:id="@+id/iv_back"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
         android:src="@mipmap/left_arrow_white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="36dp"
+        app:layout_constraintTop_toTopOf="@id/tv_big_name"
+        app:layout_constraintBottom_toBottomOf="@id/tv_big_name"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="ContentDescription" />
 
-    <ImageView
-        android:id="@+id/iv_menu"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:src="@mipmap/menus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
-    
     <TextView
         android:id="@+id/tv_big_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hanifah Tri Nuraini"
+        tools:text="Hanifah Tri Nuraini"
         android:textColor="@color/white"
-        android:textSize="32sp"
+        android:textSize="42sp"
         android:fontFamily="@font/montserrat_bold"
-        android:layout_marginEnd="100dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginEnd="120dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toEndOf="@id/iv_back"/>
 
     <TextView
         android:id="@+id/tv_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="haniboni"
-        android:textSize="14sp"
+        tools:text="haniboni"
+        android:textSize="16sp"
         android:textColor="@color/white_soft"
         android:fontFamily="@font/montserrat_medium"
         android:layout_marginTop="28dp"
@@ -58,7 +50,8 @@
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_username">
+        app:layout_constraintTop_toBottomOf="@id/tv_username"
+        tools:ignore="DisableBaselineAlignment">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -77,7 +70,7 @@
                 android:fontFamily="@font/montserrat_semibold"
                 android:paddingStart="32dp"
                 android:paddingEnd="32dp"
-                android:text="20"
+                tools:text="20"
                 android:textAllCaps="false"
                 android:textSize="14sp"/>
 
@@ -109,7 +102,7 @@
                 android:fontFamily="@font/montserrat_semibold"
                 android:paddingStart="32dp"
                 android:paddingEnd="32dp"
-                android:text="185"
+                tools:text="185"
                 android:textAllCaps="false"
                 android:textSize="14sp"/>
 
@@ -140,7 +133,7 @@
                 android:fontFamily="@font/montserrat_semibold"
                 android:paddingStart="32dp"
                 android:paddingEnd="32dp"
-                android:text="150"
+                tools:text="150"
                 android:textAllCaps="false"
                 android:textSize="14sp"/>
 
@@ -163,7 +156,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@mipmap/user"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="42dp"
         app:layout_constraintTop_toBottomOf="@id/ly_konten"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="ContentDescription" />
@@ -184,7 +177,7 @@
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hanifah Tri Nuraini"
+        tools:text="Hanifah Tri Nuraini"
         android:textColor="@color/gray_light"
         android:textSize="13sp"
         android:fontFamily="@font/montserrat_semibold"
@@ -218,7 +211,7 @@
         android:id="@+id/tv_company"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Google working on @android"
+        tools:text="Google working on @android"
         android:textColor="@color/gray_light"
         android:textSize="13sp"
         android:fontFamily="@font/montserrat_semibold"
@@ -240,7 +233,7 @@
         android:id="@+id/tv_konten_lives"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lives"
+        android:text="@string/lives_detail"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:fontFamily="@font/montserrat_bold"
@@ -252,7 +245,7 @@
         android:id="@+id/tv_lives"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Kotagede, Yogyakarta, Indonesia"
+        tools:text="Kotagede, Yogyakarta, Indonesia"
         android:textColor="@color/gray_light"
         android:textSize="13sp"
         android:fontFamily="@font/montserrat_semibold"
@@ -288,7 +281,8 @@
         android:layout_marginTop="46dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintTop_toBottomOf="@id/iv_avatar"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="ContentDescription" />
 
     <View
         android:layout_width="180dp"
