--- a/app/src/main/res/layout/item_list_user.xml
+++ b/app/src/main/res/layout/item_list_user.xml
@@ -46,7 +46,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="28dp"
         android:fontFamily="@font/montserrat_bold"
-        android:text="Hanifah Tri Nuraini"
+        tools:text="Hanifah Tri Nuraini"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/montserrat_light"
-        android:text="haniboni"
+        tools:text="haniboni"
         android:textColor="@color/white"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@id/tv_nameuser"
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:fontFamily="@font/montserrat_bold"
-        android:text="150"
+        tools:text="150"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@id/tv_username"
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:fontFamily="@font/montserrat_light"
-        android:text="repo"
+        tools:text="repo"
         android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@id/tv_repo_value"
@@ -97,7 +97,7 @@
         android:fontFamily="@font/montserrat_regular"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
-        android:text="More"
+        android:text="@string/more_btn"
         android:textAllCaps="false"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@id/tv_repo_value"
